used whitespace nowrap to fix elements from wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: "Lato", sans-serif;
@@ -66,6 +69,13 @@ main {
   background-position: center;
   padding: 2rem 5rem;
   position: relative; }
+  .header__dropdown {
+    font-size: 5rem;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff; }
   .header__title {
     font-size: 3rem;
     font-weight: 400;
@@ -105,6 +115,7 @@ main {
     font-size: 12rem;
     letter-spacing: 4px;
     font-weight: 900;
+    white-space: nowrap;
     margin-bottom: 3rem;
     position: absolute;
     top: 40%;
@@ -300,10 +311,27 @@ main {
     display: flex;
     flex-direction: column;
     width: 50%; }
+  .intro__initials {
+    padding: 1.2rem;
+    border-radius: 25%;
+    width: 5rem;
+    height: 5rem;
+    background-color: #ff3a20;
+    color: #fff;
+    border: 5px solid #d3d9e5;
+    position: absolute;
+    top: -1.5rem;
+    left: -1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.4rem;
+    letter-spacing: 2px; }
   .intro__column-2 {
+    position: relative;
     display: flex;
     flex-direction: column;
-    background-color: #fff;
+    background-image: linear-gradient(to right bottom, #494949, #1d1d1d);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
     border-radius: 8px;
     transform: scale(1.1);
@@ -320,12 +348,14 @@ main {
     margin-bottom: 1rem; }
   .intro__personal {
     font-size: 3rem;
-    color: #333333;
-    font-weight: 400;
-    letter-spacing: 1px;
+    color: #fff;
+    font-weight: 300;
+    letter-spacing: 2px;
     margin-bottom: 1rem; }
   .intro__item {
-    list-style-type: none; }
+    list-style-type: none;
+    margin: 0.5rem;
+    color: #fff; }
   .intro__span::after {
     content: ":";
     position: absolute;
@@ -345,24 +375,14 @@ main {
     background-image: linear-gradient(to right, #5dadec, #2a5298); }
   .intro__span-info {
     font-size: 2rem;
-    margin-left: 2rem; }
-  .intro__resume-btn::after {
-    content: "";
-    height: 100%;
-    background-color: #1e3c72;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 3px;
-    transform: scaleY(0);
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
-    z-index: -1; }
+    margin-left: 2rem;
+    font-weight: 300; }
   .intro__resume-btn:hover {
-    color: #fff; }
+    background-color: #3b64ac; }
   .intro__resume-btn {
     display: block;
-    border: 2px solid #2a5298;
-    color: #2a5298;
+    background-color: #2a5298;
+    color: #fff;
     border-radius: 2px;
     padding: 0.5rem 1rem;
     text-align: center;
@@ -403,14 +423,16 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   grid-gap: 5rem;
-  padding: 10rem; }
+  padding: 10rem;
+  opacity: 0; }
 
 .skill-title {
   text-align: center;
   font-size: 5rem;
   letter-spacing: 1px;
   font-weight: 300;
-  color: #1d1d1d; }
+  color: #1d1d1d;
+  opacity: 0; }
 
 .project {
   display: grid;
@@ -533,6 +555,9 @@ main {
   color: #1d1d1d;
   margin-top: 8rem; }
 
+.section-in {
+  opacity: 0; }
+
 .contact {
   background-color: transparent;
   width: 100%;
@@ -540,7 +565,8 @@ main {
   margin-top: 50rem;
   position: absolute;
   bottom: 0;
-  left: 0; }
+  left: 0;
+  opacity: 0; }
   .contact__text {
     color: #fff;
     margin-bottom: 3rem;
