--- a/scss/layout/contact.scss
+++ b/scss/layout/contact.scss
@@ -6,6 +6,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  opacity: 0;
 
   &__text {
     color: $white;
